fix: font too large

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -9,7 +9,7 @@
 
 body {
     background-color: #fdfdfd;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 1.25;
 }
 
@@ -25,7 +25,6 @@ body {
     margin: 0;
 }
 
-/* Responsive two-column layout */
 .layout {
     display: flex;
     align-items: flex-start;
@@ -54,7 +53,6 @@ body {
 
 .portrait-container {
     width: 400px;
-    aspect-ratio: 1/1;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -147,7 +145,7 @@ body {
     }
     .portrait-container {
         width: 100%;
-        height: 300px;
+        aspect-ratio: 4/3;
     }
     .links-container {
         justify-content: center;
